fix navigation overlap and add design to forms

--- a/app/assets/stylesheets/freelancer/bootswatch_bootstrap.css
+++ b/app/assets/stylesheets/freelancer/bootswatch_bootstrap.css
@@ -16,6 +16,10 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+
+.beliefs {
+  font-size: 20px;
+}
 body {
   margin: 0;
 }
@@ -4172,7 +4176,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   min-height: 50px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
@@ -4222,7 +4226,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
-  max-height: 340px;
+  max-height: 200px;
 }
 @media (max-device-width: 480px) and (orientation: landscape) {
   .navbar-fixed-top .navbar-collapse,
